Fix footer link wrapping on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -749,15 +749,17 @@ address a:hover {
 	text-align: center;
 	padding: 40px 24px;
 	font-weight: 300;
+	word-wrap: initial;
 
 	a {
 		color: rgba(255, 255, 255, 0.8);
 		text-decoration: underline;
+		display: inline-block;
 	}
 
 	.logo {
 		text-decoration: none;
-		font-size: 17px;
+		font-size: 1.1em;
 	}
 
 	nav {
